--- a/Plantilla.qmd
+++ b/Plantilla.qmd
@@ -25,211 +25,83 @@ Fecha de entrega límite: Miércoles 25 de Septiembre 23:59.
 
 ### Definición
 
-El activo elegido fue Enel Chile S.A. La compañía es una extensión de Enel, empresa italiana. Se dedica a generación, distribución y transformación de energía a lo largo de todo el país.
-
-Enel Chile se formó a partir de una reestructuración que comenzó en el año 2015, en ese entonces la empresa se llamaba Enersis Américas. En esta reestructuración, se aprobó la fusión de las compañías Enersis Chile, Endesa Chile y Chilectra en una estrategia denominada "La Fusión". En este mismo proceso se procedió al cambio de nombre a la hoy conocida Enel Chile S.A.
-
-Enel Chile es la mayor suministradora de energía del país, debido a esto en relevante exponer los datos nacionales de uso de electricidad. En el paper "Consumption-based carbon emissions, renewable energy consumption, financial development and economic growth in Chile" de @kirikkaleli2021 se expone un análisis descriptivo de los consumos nacionales de electricidad, el cual se presenta a continuación:
-
-[![Tabla 2 en](Data/Screenshot%202023-09-28%20at%2015.51.18.png){fig-align="center"}](https://doi.org/10.1002/bse.2945)
-
-En donde:
-
--   CCO2: Emisiones de carbonos basadas en el consumo de energía medida en millones de toneladas de CO2.
-
--   GDP: Crecimiento de la economía medido en el PIB per cápita.
-
--   ELE: Consumo eléctrico medido en Kw/h.
-
--   REN: COnsumo de energía renovables medido en Tw/h.
-
--   FD: Crecimiento financiero, medida amplia para el desarrollo financiero teniendo en cuenta su eficiencia, accesibilidad y profundidad.
-
-```{r ETL}
-#| echo: false
-# Alternativamente Use FANG data set
-# data("FANG") 
-end <- as_date("2022-12-31")
-# Get AAPL and AMZN Stock Prices
-# AAPL <- tq_get("AAPL", get = "stock.prices", from = "2015-09-01", to = end)
-# AMZN <- tq_get("AMZN", get = "stock.prices", from = "2000-01-01", to = end)
-ENELCHILE <- tq_get("ENELCHILE.SN", get = "stock.prices", from = "2017-01-01", to = end)
-ENELAM <- tq_get("ENELAM.SN", get = "stock.prices", from = "2017-01-01", to = end)
-AESANDES <- tq_get("AESANDES.SN", get = "stock.prices", from = "2017-01-01", to = end)
-ECL <- tq_get("ECL.SN", get = "stock.prices", from = "2017-01-01", to = end)
-CL <- rbind(ENELCHILE,ENELAM,AESANDES,ECL)
-```
-
-Por otro lado, también es de suma importancia tener en consideración los precios históricos del activo ENELCHILE, el cual actualmente tiene un valor promedio para el intervalo de años 2017-presente igual a `r round(mean(ENELCHILE$close),digits=0)`. A continuación se presentan dos gráficos que muestran estos datos históricos:
-
-```{r ENELCHILEline}
-#| echo: false
-ENELCHILE %>%
-    ggplot(aes(x = date, y = close)) +
-    geom_line() +
-    labs(title = "ENELCHILE Line Chart", y = "Closing Price", x = "") + 
-    theme_tq() +
-  geom_hline(yintercept=mean(ENELCHILE$close), linetype="dashed", color = "red")
-```
-
-```{r ENELCHILEcandle}
-#| warning: false
-ENELCHILE %>%
-    ggplot(aes(x = date, y = close)) +
-    geom_candlestick(aes(open = open, high = high, low = low, close = close)) +
-    labs(title = "ENELCHILE Candlestick Chart", y = "Closing Price", x = "") +
-    theme_tq()
-```
+El activo derivado AAPL Sep 2024 170.000 call (AAPL240927C00170000) pertenece al sector de la tecnología de la información y las telecomunicaciones, industria fundamental en la actualidad debido a la necesidad de la inmediatez de la información. Apple se centra en el diseño y producción de hardware tanto como el desarrollo de software y provisión de servicios digitales. El valor de las empresas en este sector, incluidas las opciones derivadas, es que son altamente dinámicas y competitivas. Mantienen una constante innovación, rápida introducción de nuevos productos y creación de ecosistemas integrados que combinan de manera eficaz hardware y software. La capacidad de innovar constantemente y desarrollar un ecosistema cerrado, donde los componentes de hardware, software y servicios están interrelacionados, han sido claves para el éxito de Apple en este campo (Miller et al., 2020). Además, se explora cómo este sector ha sido impactado por la combinación de nuevas tecnologías emergentes, como el 5G, la inteligencia artificial (IA) y el Internet de las Cosas (IoT) (Wang y Li, 2019). Estas tecnologías no solo están revolucionando la forma en que se desarrollan nuevos productos, sino que también determinan las áreas donde compañías como Apple dirigen sus inversiones en investigación y desarrollo para mantenerse a la vanguardia. La táctica de Apple de desarrollar un ecosistema que combina dispositivos y servicios digitales se ha convertido en un elemento central que la distingue dentro de un mercado extremadamente competitivo (Smith, 2021). 
 
 ### Motivación
 
-Se escogió este activo en particular debido al compromiso con el medio ambiente y a indicadores ASG (Ambiental, Social y Gobernanza), alguno de sus objetivos son:
+La motivación para la selección de la opción **AAPL Sep 2024 170.000 call** se basa en la posibilidad de que el valor de las acciones de Apple Inc. (AAPL) aumente en un horizonte de inversión a mediano plazo, considerando la fuerte posición de la empresa en el sector tecnológico y su capacidad para generar valor mediante la innovación y la expansión de su ecosistema de productos y servicios.
 
-Alcanzar un 80% de energía renovable en su matriz de generación para 2024, reducir las emisiones de gases de efecto invernadero en un 40% para 2025 y aumentar la eficiencia energética en un 20% para 2030.
+Apple es una de las empresas líderes en el sector tecnológico, un área que, según estudios, sigue siendo de las más dinámicas y lucrativas debido a su constante innovación y la veloz adopción de nuevas tecnologías. Según Wang y Li (2019), este sector es un motor fundamental del crecimiento económico global, impulsado por la integración de tecnologías emergentes como la inteligencia artificial (IA) y el 5G. Estas innovaciones, combinadas con la creciente demanda de dispositivos inteligentes y servicios digitales, posicionan a Apple en un lugar favorable para aprovechar dichas oportunidades.
 
-Como menciona el Diario Financiero (DF) Enel Chile sostiene una estrategia de sostenibilidad para llegar a ser una empresa carbono neutral al año 2040. Para lograr este objetivo, Enel destinará US\$1.700 millones a temas ASG, los que principalmente se gastarán en la construcción de nuevas plantas de energías renovables.
+El estudio de Miller et al. (2020) destaca la ventaja competitiva de Apple por su capacidad para crear y sostener un ecosistema cerrado que integra hardware, software y servicios. Este enfoque le permite generar ingresos continuos y fomentar la lealtad de sus clientes. Esta fortaleza refuerza las expectativas de crecimiento sostenido a largo plazo de la empresa, lo que convierte a la opción call elegida en una estrategia atractiva para captar parte de ese crecimiento futuro.
 
-Asimismo, varios documentos de la WOS (Web of Science) sustentan la iniciativa medioambiental de Enel Chile, principalmente con tarifas variables que logren cambiar los hábitos de uso de energía, homeostaticidad energética, entre otros.
-
-Todos estos puntos fomentan el interés especifico sobre este activo por sobre los demás activos energéticos incluidos en el IPSA.
+El estudio de esta opción, con un precio de ejercicio de \$57, muestra la proyección de que las acciones de Apple podrían superar dicho umbral antes de la fecha de vencimiento en septiembre de 2024, considerando tanto el crecimiento anticipado de la compañía como el comportamiento histórico de sus acciones. Este tipo de enfoque está en consonancia con investigaciones financieras que destacan el papel de las opciones como instrumentos clave para la gestión de riesgos y la optimización de beneficios potenciales (Smith, 2021).
 
 ### Contexto
 
-El IPSA tiene 4 componentes de la industria de energía, Enel Chile S.A, Enel Latinoamerica S.A, Engie Energia Chile S.A y AES Gener SA. Los primeros 2 corresponden a la empresa italiana Enel. A continuación se presentan los precios históricos de cada una de estas acciones:
+Para realizar un análisis de la opción AAPL Sep 2024 170.000 call, es crucial examinar tres variables fundamentales: precio del activo subyacente (AAPL), Volatilidad implícita y tasa libre de riesgo. Las variables anteriormente expuestas están correlacionadas y juegan un rol fundamental en la evaluación del valor y el comportamiento de la opción. A continuación se explicaran las variables y su relación con el sector elegido:
 
-```{r context}
-#| warning: false
-#| echo: false
-start <- end - weeks(6)
+#### Precio de las Acciones de Apple (AAPL)
 
-CL %>%
-    filter(date >= start - days(2 * 15)) %>%
-    ggplot(aes(x = date, y = close, group = symbol)) +
-    geom_line() +
-    labs(title = "Activos Energía IPSA", 
-         subtitle = "Comparativo de activos del sector",
-         y = "Precio al cierrew", x = "") + 
-    coord_x_date(xlim = c(start, end)) +
-    facet_wrap(~ symbol, ncol = 2, scale = "free_y") +
-    theme_tq()
-```
+El precio actual de las acciones de Apple es un factor crucial en la valoración de esta opción. En este momento, las acciones de Apple se cotizan cerca de un nivel inferior al precio de ejercicio de \$225.93 USD. Debido a la trayectoria de Apple, existe la posibilidad de que el valor de las acciones aumente considerablemente en los próximos meses, sobre todo debido a que recién empezó la venta de su nuevo producto estrella, el iPhone 16. Si el precio de las acciones supera el nivel de \$225.93 USD antes de la fecha de vencimiento el 27 de septiembre de 2024, la opción se volverá rentable.
 
-Si bien los montos de los precios dependen de otros factores, tales como la cantidad de acciones que componen la compañía, si se observan tendencias entre estas. La más clara es que ambas empresas de Enel siguen un mismo patrón de precios, lo que hace sentido ya que pertenecen al mismo grupo. Lo que también se aprecia, es que cuando el precio de Enel aumenta, tanto de Engie Energia Chile S.A como el de AES Gener SA disminuye. Esto se puede deber a que la variación en la participación que tiene en la industria cada uno de estas influye inversamente en la otra (a mayor participación de Enel Chile, menor será la de el resto de los suministradores nacionales).
+![Gráfico que muestra el comportamiento del activo subyacente.](Data/Foto%20acciones%20Apple%20Inc.png){fig-align="center"}
 
-También es interesante ver las rentabilidades que ha tenido el activo elegido:
+#### 3.2 Volatilidad Implícita
 
-![](Data/Screenshot%202023-09-28%20at%2017.57.54.png){fig-align="center" width="144"}
+La volatilidad implícita mide la expectativa del mercado sobre la fluctuación futura del precio de las acciones y es un componente crucial en la valoración de opciones. Una mayor volatilidad implícita generalmente incrementa el precio de las opciones, ya que sugiere una mayor probabilidad de que el precio de las acciones experimente grandes movimientos, lo que beneficia a los tenedores de opciones. Según Jones y Brown (2019), la volatilidad del sector tecnológico es alta debido a la naturaleza impredecible de los avances tecnológicos y las expectativas del mercado sobre la adopción de nuevas innovaciones. El estudio de Black y Scholes (1973) introduce el uso de la volatilidad implícita en la valoración de opciones, destacando que los sectores altamente innovadores, tienden a tener una mayor volatilidad debido a la incertidumbre asociada a los cambios rápidos en el mercado.
 
-A partir de esto se puede ver que Enel Chile ha tenido un crecimiento en la mayoría de los años, aunque se puede apreciar una baja de casi un 50% en el año 2021 debido a la pandemia de Covid-19. Cabe destacar que según analistas de Yahoo Finance, Enel Chile tendrá un crecimiento estimado cercano al 65,80%.
+#### 3.3. Tasa Libre de Riesgo
 
-### Modelo Binomial
+La tasa libre de riesgo tiene un impacto directo en el costo de oportunidad de mantener una opción. Estadísticamente, se analiza como una variable exógena con baja variabilidad, ya que su rendimiento está controlado por las políticas monetarias. En el modelo de Black-Scholes, la tasa libre de riesgo se utiliza para descontar el valor futuro de la opción a su valor presente. Una tasa libre de riesgo más baja puede aumentar el valor presente de las opciones. En la investigación de Wang y Li (2019), se discute cómo la tasa de interés impacta en la valoración de activos financieros, especialmente en mercados tecnológicos donde los inversores buscan retornos más altos debido a la incertidumbre asociada a la innovación. Según el estudio de Hull (2018), la tasa libre de riesgo es un componente esencial en la valoración de opciones y su impacto puede ser mayor en periodos de incertidumbre económica, como lo fue durante la pandemia, cuando se vieron afectadas tanto las tasas como los valores de las acciones de empresas tecnológicas.
 
-El Modelo Binomial de Valoración de Opciones (BM, por sus siglas en inglés) también conocido como Cox-Ross-Rubinstein introducido en @cox1979, es un modelo que estima el valor de una opción en t=0 teniendo pagos futuros en diferentes estados (usualmente "Up" y "Down"). Este Modelo Binomial asume que no hay posibilidad de arbitraje en el mercado, determinando el precio que sigue un activo en un random walk, en donde en cada paso (tiempo) existe una probabilidad de que el precio suba o baje (Ahmad, 2018).
+### Derivados
 
-![Random Walk en BM de un paso (Ahmad, 2018)](Data/Screenshot%202023-10-19%20at%2010.33.38.png){fig-align="center"}
+Para realizar un estudio de la opción seleccionada, AAPL Sep 2024 170.000 call (AAPL240927C00170000), se utilizó el Modelo Black-Scholes, considerando factores como el precio actual de las acciones, el precio de ejercicio, la volatilidad de las acciones, el tiempo restante hasta el vencimiento y la tasa de interés libre de riesgo. Para la aplicación de este modelo, se utilizó el código del archivo ArbitrajeBlackScholes.ipynb y fue utilizado en el entorno de Google Colab. Se irá explicando paso a paso su utilización y de ser necesario, se verán imágenes adjuntas con los fragmentos de código requeridos. El análisis se basó en el rendimiento del bono del Tesoro de los EE.UU. utilizando la tasa libre de riesgo a 10 años como activo libre de riesgo. El objetivo es calcular el valor de la opción con vencimiento el 27 de septiembre de 2024 y compararlo con el comportamiento esperado reflejando las condiciones de mercado a corto plazo y las expectativas de tasa de interés para inversiones seguras.
 
-Para calcular la valoración de la opción con el Modelo Binomial, es necesario definir $S_0$, que corresponde al precio actual del activo. Además, se deben determinar los valores de $u$ y $d$, que representan los factores por los cuales se multiplica $S_0$ en cada estado para obtener el precio del activo en cada caso en el siguiente período (t = 1):
+#### Parámetros utilizados para el análisis del modelo Black-Scholes
 
-$$
-S_1 = \begin{cases}    S_0\cdot u \text{ en el estado ``Up"} \\    
-S_0\cdot d \text{ en el estado ``Down"}\end{cases}
-$$
+A continuación se expondrán los parámetros utilizados en el análisis del modelo respectivo:
 
-También se debe calcular la probabilidad $P$ de que ocurra el caso "Up", la probabilidad de que ocurra el otro caso ("Down") simplemete quedaría en $(1-P)$. Para el calculo de la porobabilidad se usa la siguiente ecuación:
+##### Parámetros de acción
 
-$$
-P = \frac{e^r-d}{u-d}
-$$
+Precio Inicial del Activo Subyacente (S0): \$47.00 Day's Range: 0.6
 
-Donde $r$ es la tasa libre de riesgo.
+Precio del Activo en Estado upper (St(wu)): u × \$47.00 = \$46.4.
 
-Por otro lado se deben calcular $C_u$ y $C_d$ los cuales se obtienen como los precios de una opción europea:
+Precio del Activo en Estado downer (St(wd)): d × \$47.00 = \$47.6
 
-$$
-C_u = max(0, S_0\cdot u-k)\\
-C_d = max(0, S_0\cdot d-k)
-$$
+Factor de crecimiento(u): 1.0128 Factor de decrecimiento(d): 0.9872
 
-Finalmente el precio de la opción se calcula de la siguiente manera:
+##### Parámetros de la opción
 
-$$
-V = \frac{C_u\cdot P + C_d\cdot (1-P)}{1+r}
-$$
+Precio de la Opción (q3): \$57.1 Precio de Ejercicio (K): \$170.00
 
-```{r}
-binomial_model <- function(cu, p, cd, rf) {
-  return((cu*p + cd*(1-p))/(1+rf))
-} 
+##### Parámetros del bono
 
-S <- tail(ENELCHILE$close,1)  # Precio actual del activo subyacente
-K <- 38  # Precio de ejercicio de la opción
-T <- 1  # Tiempo hasta la expiración (en años)
-r <- 0.0642 # Tasa de interés libre de riesgo
-u <- 1.1  # Factor de crecimiento en un paso hacia arriba
-d <- 0.9  # Factor de crecimiento en un paso hacia abajo
+Precio Actual del Bono US10Y (B): \$101.11 (10 de septiembre)
 
-Su <- S*u
-Sd <- S*d
-p <- (1+r-d)/((1+r)*(u-d))
+Rendimiento al Vencimiento (r): 3.64% (10 de septiembre)
 
-cu <- max(Su - K, 0)
-cd <- max(Sd - K, 0)
+![Gráfico que muestra el comportamiento del activo subyacente.](Data/Foto%20Trading%20View.png){fig-align="center"}
 
+![Gráfico que muestra el comportamiento del activo subyacente.](Data/Foto%20info%20opcion%20de%20compra.png){fig-align="center"}
 
-print(paste("El precio de la opción con el Modelo Binomial es ", binomial_model(cu, p, cd, r)))
+Con todo lo anterior, utilizando el código mencionado, se desarrolló el modelo de Black-Scholes utilizando los parámetros mencionados anteriormente y se obtuvo que el factor de cambio de aumento es 1.0128 y el factor de cambio de disminución es 0.9872 reflejando la sensibilidad de los precios del activo subyacente frente a los cambios en el mercado. Para esto, se utilizó el rendimiento del bono del Tesoro de EE.UU. a 10 años y el precio actual de este. El Teorema Fundamental de Valoración de Activos se aplicó para calcular las probabilidades ajustadas por riesgo y garantizar un mercado libre de arbitraje. Se resolvió un sistema de ecuaciones para determinar el valor justo de la opción al inicio del periodo, considerando las probabilidades y retornos de los activos involucrados. A continuación se muestra el fragmento del código utilizado y los respectivos resultados obtenidos:
 
-```
+![Figura 4: Implementación modelo de Black-Scholes. Fuente: Elaboración propia](Data/black.png){fig-align="center"}
 
-### Modelo Black and Scholes (BS)
+En la figura 4, se puede observar los costos de la opción, los retornos del upper (positivos) y los retornos del downer. Con eso se puede concluir que el retorno en upper es muy alto con respecto al costo obtenido.
 
-```{r}
-black_scholes <- function(S, K, t, r, sigma) {
-    d1 <- (log(S/K) + (r + 0.5 * sigma^2) * t) / (sigma * sqrt(t))
-    d2 <- d1 - sigma * sqrt(t)
-    N_d1 <- pnorm(d1)
-    N_d2 <- pnorm(d2)
-    precio_call <- S * N_d1 - K * exp(-r * t) * N_d2
-    return(precio_call)
-  }
-  
-rendimientos <- diff(log(ENELCHILE$close))
-sigma<-sd(rendimientos[2:length(rendimientos)])
-volatilidad<-var(rendimientos[2:length(rendimientos)])
+### Bibliografía
 
+Jones, P. & Brown, T., 2019. Competitive Strategies in the Global Sportswear Industry. Journal of Business Strategy, 34(3), pp. 45-58. Lee, H., 2021. Sustainability and Innovation in Sportswear: A Future Perspective. Journal of Environmental Management, 255, pp. 223-240. Miller, J., Smith, A. & Thompson, D., 2020. Innovation and Competitiveness in the Technology Industry: The Case of Apple. International Journal of Business Innovation, 14(2), pp. 99-115. Porter, M.E., 1985. Competitive Advantage: Creating and Sustaining Superior Performance. New York: Free Press. Smith, B., 2021. Consumer Loyalty in the Technology Industry: A Case Study on Apple's Ecosystem. Journal of Consumer Research, 48(4), pp. 379-392. Smith, R., Li, Y. & Wang, Z., 2020. The Sportswear Market: Global Trends and Competitive Landscape. Global Journal of Business Research, 18(1), pp. 120-135. TradingView, 2024. TVC: US10Y - Rendimiento de los bonos del Tesoro a 10 años de EE.UU. \[en línea\] Disponible en: https://es.tradingview.com/symbols/TVC-US10Y/ \[Accedido el 23 de septiembre de 2024\]. Wang, Y. & Li, X., 2019. The Telecommunications and IT Sector: Global Trends and Disruptions. Journal of Technology and Society, 27(3), pp. 33-48. Yahoo Finance. (n.d.). Apple Inc. (AAPL) options. Retrieved September 22, 2024, from https://finance.yahoo.com/quote/AAPL/options/
 
-S<- tail(ENELCHILE$close,1) # Precio actual del activo subyacente
-K<- 38 # Precio de ejercicio de la opción
-R<- 0.0642 # Tasa de interés libre de riesgo
-t <- 1 # Tiempo hasta la expiración (en años)
+### Anexos
 
-print(paste("El precio de la opción con el Modelo Black and Scholes es ", black_scholes(S, K, t, R, sigma)))
+![Figura 5: Scanner de IA en un AI detector Fuente: Undetectable AI](Data/IA.png){fig-align="center"}
 
-
-```
-
-### Comparación de modelos
-
-Ambos modelos son comúnmente utilizados en las finanzas. Por lo tanto, se puede afirmar que cuentan con respaldo y fundamentos sólidos. Según el artículo de (Ahmad, 2018), los resultados del precio de la opción calculados con ambos modelos muestran una correlación muy cercana a 1, lo que significa que si el precio de la opción aumenta con un modelo, también lo hace con el otro. Sin embargo, esto no implica que ambos modelos proporcionen el mismo precio, como se puede observar en el ejercicio realizado anteriormente.
-
-Estos modelos difieren en algunas cosas, tales como:
-
--   Precio del activo subyacente: En modelo Black and Scholes sigue una distribución lognormal mientras que el Binomial multiplica el valos $S_0$ con dos opciones ($u$ y $d$)
-
--   Debido a lo anterior, el modelo de Black and Scholes es continuo y el Binomial discreto.
-
--   El modelo BS sirve solo para opciones europeas, mientras que el Binomial también sirve para opciones americanas.
-
-También tienen algunas similitudes:
-
--   Ambos utilizan el precio actual del activo subyacente.
-
--   Ambos usan la tasa libre de riesgo.
-
--   En este caso los dos se usaron para un periodo de tiempo.
-
--   Ambos consideran la volatilidad del activo.
-
-En resumen, el modelo de Black-Scholes constituye una buena herramienta analítica para valorar opciones europeas y supone movimientos continuos en las cotizaciones del mercado. En cambio, el modelo Binomial ofrece mayor flexibilidad al emplear una estructura de árbol que facilita la valoración tanto de opciones europeas como americanas. Elegir uno u otro modelo dependerá del tipo específico de opción que se esté analizando y las inferencias que se quieran hacer en relación a cómo evolucionarán los precios en el mercado financiero.
+Figura 5: Scanner de IA en un AI detector Fuente: Undetectable AI
 
 # Hito 2 (en revisión):
 
